@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.audio.intergalacticfm"
        name="Intergalactic FM"
-       version="1.0.6"
+       version="1.0.7"
        provider-name="Pander">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
@@ -37,8 +37,8 @@ Zie ook de videoplugin. Overweeg a.u.b. een donatie te doen op https://intergala
 No Station Such Dedication
         ]]></description>
         <license>GNU General Public License, Version 2</license>
+        <source>https://github.com/intergalacticfm/plugin.audio.intergalacticfm</source>
         <website>https://intergalactic.fm</website>
         <forum>http://forum.kodi.tv/showthread.php?tid=257200</forum>
-        <source>https://github.com/intergalacticfm/plugin.audio.intergalacticfm</source>
     </extension>
 </addon>
